--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,9 +1,9 @@
-container:
-  image: golang:1.11
-
 test_task:
-  env:
-    CIRRUS_WORKING_DIR: /go/src/github.com/$CIRRUS_REPO_FULL_NAME
+  container:
+    image: golang:latest
+  modules_cache:
+    fingerprint_script: cat go.sum
+    folder: $GOPATH/pkg/mod
   get_script: go get -t -v ./...
   vet_script: go vet -v ./...
   test_script: go test -v ./...
